--- a/src/main/resources/datasource.properties
+++ b/src/main/resources/datasource.properties
@@ -3,3 +3,11 @@ db.driverClassName=com.mysql.jdbc.Driver
 db.url=jdbc:mysql://10.10.10.144:3306/mmall?useUnicode=true&characterEncoding=utf8
 db.username=mmall
 db.password=mmall
+
+db.initialSize = 20
+db.maxActive = 50
+db.maxIdle = 20
+db.minIdle = 10
+db.maxWait = 10
+db.defaultAutoCommit = true
+db.minEvictableIdleTimeMillis = 3600000
