--- a/src/main/resources/datasource.properties
+++ b/src/main/resources/datasource.properties
@@ -1,8 +1,9 @@
 db.driverLocation=D:\\maven\\repository\\mysql\\mysql-connector-java\\5.1.6\\mysql-connector-java-5.1.6.jar
 db.driverClassName=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://10.10.10.144:3306/mmall?useUnicode=true&characterEncoding=utf8
-db.username=mmall
-db.password=mmall
+#db.url=jdbc:mysql://10.10.10.144:3306/mmall?useUnicode=true&characterEncoding=utf8
+db.url=jdbc:mysql://localhost:3306/mmall?useUnicode=true&characterEncoding=utf8
+db.username=root
+db.password=112233
 
 db.initialSize = 20
 db.maxActive = 50
