Update alipay callback

--- a/src/main/resources/mmall.properties
+++ b/src/main/resources/mmall.properties
@@ -6,6 +6,6 @@ ftp.server.http.prefix=http://localhost:8080/upload/
 #ftp.server.http.prefix=http://img.happymmall.com/
 
 
-alipay.callback.url=http://www.happymmall.com/order/alipay_callback.do
+alipay.callback.url=http://d8x7nd.natappfree.cc/order/alipay_callback.do
 
 password.salt = geelysdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
